fix: switch to whiteprints-template-context

--- a/template/injectors/md_files.py.jinja
+++ b/template/injectors/md_files.py.jinja
@@ -22,7 +22,7 @@ def update_contributing() -> None:
     contributing = contributing.replace(
         source,
 """
-  - Include unit tests; this project maintains [100% code coverage](https://codecov.io/gh/{{ organisation }}/{% include pathjoin('includes', 'project_slug.jinja') %}).
+  - Include unit tests; this project maintains [100% code coverage](https://codecov.io/gh/{{ organisation }}/{{ project_slug }}).
 """
     )
     contributing_file.write_text(contributing, encoding="utf-8")
@@ -42,7 +42,7 @@ def update_readme() -> None:
         source,
 """
         <a href="https://www.contributor-covenant.org/version/2/1/code_of_conduct/"><img alt="contributor covenant badge" src="https://img.shields.io/badge/Contributor_Covenant-2.1-4BAAAA.svg?logo=contributorcovenant"/></a>
-        <a href="https://codecov.io/gh/{{ organisation }}/{% include pathjoin('includes', 'project_slug.jinja') %}" ><img alt="codecov badge" src="https://codecov.io/gh/{{ organisation }}/{% include pathjoin('includes', 'project_slug.jinja') %}/graph/badge.svg?token="/></a>
+        <a href="https://codecov.io/gh/{{ organisation }}/{{ project_slug }}" ><img alt="codecov badge" src="https://codecov.io/gh/{{ organisation }}/{{ project_slug }}/graph/badge.svg?token="/></a>
 """
     )
     readme_file.write_text(readme, encoding="utf-8")
